--- a/public/index.html
+++ b/public/index.html
@@ -4,48 +4,110 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PDF Parse</title>
+    <title>PDF Split</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"></script>
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/uppy/3.17.0/uppy.css"
+    /> -->
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/uppy/3.17.0/uppy.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.4.0/dist/pdf-lib.min.js"></script>
+    <script src="./jszip.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/downloadjs@1.4.7/download.min.js"></script>
   </head>
   <body>
-    <div>What up!!!!</div>
-
-    <!-- <input type="file" accept="application/pdf" /> -->
+    <div>ahoyyyyy</div>
 
     <form
-      method="post"
-      enctype="multipart/form-data"
-      action="/pdf"
       onsubmit="event.preventDefault()"
+      enctype="multipart/form-data"
+      method="post"
+      action=""
     >
-      <div>
-        <label for="file">Choose file to upload</label>
-        <input
-          type="file"
-          id="file-upload"
-          name="file"
-          accept="application/pdf"
-        />
-      </div>
-      <div>
-        <button type="submit" id="btn-submit">Submit</button>
-      </div>
+      <input id="upload" type="file" name="file" accept="application/pdf" />
+
+      <button type="submit" id="btn-submit">Submit</button>
     </form>
 
-    <script>
-      window.onload = () => {
-        document.getElementById("btn-submit").addEventListener("click", () => {
-          axios
-            .post(
-              "http://localhost:3000/pdf",
-              new FormData(document.querySelector("form"))
-            )
-            .then((resp) => {
-              console.log("Got resp", resp);
-            });
-        });
-      };
+    <!-- <button id="uppy">Click</button> -->
+
+    <!-- <script type="module">
+      import {
+        Uppy,
+        Dashboard,
+        Webcam,
+        Tus,
+      } from "https://releases.transloadit.com/uppy/v3.17.0/uppy.min.mjs";
+
+      const uppy = new Uppy({ debug: true, autoProceed: false })
+        .use(Dashboard, { trigger: "#uppyModalOpener" })
+        .use(Webcam, { target: Dashboard })
+        .use(Tus, { endpoint: "https://tusd.tusdemo.net/files/" });
+
+      uppy.on("success", (fileCount) => {
+        console.log(`${fileCount} files uploaded`);
+      });
+    </script> -->
+
+    <script type="module">
+      // const { Dashboard, Webcam, Tus } = Uppy;
+      // // import { PDFDocument } from "pdf-lib";
+
+      // const uppy = new Uppy.Uppy({
+      //   debug: true,
+      //   autoProceed: false,
+      //   restrictions: {
+      //     allowedFileTypes: [".pdf"],
+      //   },
+      // }).use(Dashboard, { trigger: "#uppy" });
+      // // .use(Webcam, { target: Dashboard })
+      // // .use(Tus, { endpoint: "https://tusd.tusdemo.net/files/" });
+
+      // uppy.on("upload", (data) => {
+      //   // Do something
+      //   console.log("Upload data", data);
+      // });
+
+      // uppy.on("success", function (fileCount, other) {
+      //   console.log(`${fileCount} files uploaded`, other);
+      // });
+
+      document
+        .getElementById("btn-submit")
+        .addEventListener("click", handleSubmit);
+
+      let fileInfo = null;
+
+      document.getElementById("upload").addEventListener("change", (ev) => {
+        fileInfo = ev.target.files;
+      });
+
+      async function handleSubmit() {
+        // const f = document.getElementById("upload").value;
+        // const f2 = new FormData(document.querySelector("form"));
+
+        // console.log("f", f2, document.getElementById("upload").value, fileInfo);
+
+        // Yesss!!!
+        const reader = new FileReader();
+        reader.readAsArrayBuffer(fileInfo[0]);
+        reader.onload = async () => {
+          // Wow, this worked (ths window...)
+          const pdfDoc = await window.PDFLib.PDFDocument.load(reader.result);
+          console.log("got doc...", pdfDoc);
+
+          const zip = new JSZip();
+          console.log("zip...", zip);
+
+          // Ahhhhhh finally, we got there!!
+          // Now we just have to do it with all subdocuments, and we should be golden... Hell yeah baby
+          zip.file("testOutput.pdf", pdfDoc.save(), { binary: true });
+          const content = await zip.generateAsync({ type: "binarystring" });
+
+          download(content, "testZip.zip", "application/zip");
+        };
+      }
     </script>
   </body>
 </html>
