--- a/public/index.html
+++ b/public/index.html
@@ -6,108 +6,216 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PDF Split</title>
 
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/uppy/3.17.0/uppy.css"
-    /> -->
+    />
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/uppy/3.17.0/uppy.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uppy/3.17.0/uppy.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.4.0/dist/pdf-lib.min.js"></script>
     <script src="./jszip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/downloadjs@1.4.7/download.min.js"></script>
+
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      #container {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 3rem;
+        height: 100vh;
+      }
+
+      #header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-transform: uppercase;
+        background-color: rgb(228, 99, 99);
+        color: white;
+        font-weight: bold;
+        height: 10vh;
+        font-size: 2rem;
+      }
+
+      #body {
+        display: flex;
+      }
+
+      #sidebar {
+        width: 20rem;
+        height: 90vh;
+        background-color: rgb(51, 51, 202);
+      }
+
+      #main {
+        flex-grow: 1;
+        height: 90vh;
+        background-color: rgb(27, 226, 166);
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      #uppy {
+        padding: 1rem;
+        cursor: pointer;
+        background: lightblue;
+      }
+    </style>
   </head>
   <body>
-    <div>ahoyyyyy</div>
+    <!-- <div>ahoyyyyy</div> -->
 
-    <form
-      onsubmit="event.preventDefault()"
-      enctype="multipart/form-data"
-      method="post"
-      action=""
-    >
-      <input id="upload" type="file" name="file" accept="application/pdf" />
+    <div id="container">
+      <!-- <form
+        onsubmit="event.preventDefault()"
+        enctype="multipart/form-data"
+        method="post"
+        action=""
+      >
+        <input id="upload" type="file" name="file" accept="application/pdf" />
 
-      <button type="submit" id="btn-submit">Submit</button>
-    </form>
+        <button type="submit" id="btn-submit">Submit</button>
+      </form> -->
 
-    <!-- <button id="uppy">Click</button> -->
+      <div id="header">get those subdocuments</div>
 
-    <!-- <script type="module">
-      import {
-        Uppy,
-        Dashboard,
-        Webcam,
-        Tus,
-      } from "https://releases.transloadit.com/uppy/v3.17.0/uppy.min.mjs";
+      <div id="body">
+        <div id="sidebar"></div>
 
-      const uppy = new Uppy({ debug: true, autoProceed: false })
-        .use(Dashboard, { trigger: "#uppyModalOpener" })
-        .use(Webcam, { target: Dashboard })
-        .use(Tus, { endpoint: "https://tusd.tusdemo.net/files/" });
-
-      uppy.on("success", (fileCount) => {
-        console.log(`${fileCount} files uploaded`);
-      });
-    </script> -->
+        <div id="main">
+          <button id="uppy">Upload a PDF</button>
+        </div>
+      </div>
+    </div>
 
     <script type="module">
-      // const { Dashboard, Webcam, Tus } = Uppy;
-      // // import { PDFDocument } from "pdf-lib";
+      const { Dashboard, Webcam, Tus } = Uppy;
+      // import { PDFDocument } from "pdf-lib";
 
-      // const uppy = new Uppy.Uppy({
-      //   debug: true,
-      //   autoProceed: false,
-      //   restrictions: {
-      //     allowedFileTypes: [".pdf"],
-      //   },
-      // }).use(Dashboard, { trigger: "#uppy" });
-      // // .use(Webcam, { target: Dashboard })
-      // // .use(Tus, { endpoint: "https://tusd.tusdemo.net/files/" });
+      const uppy = new Uppy.Uppy({
+        debug: true,
+        autoProceed: false,
+        restrictions: {
+          allowedFileTypes: [".pdf"],
+        },
+      }).use(Dashboard, { trigger: "#uppy" });
+      // .use(Webcam, { target: Dashboard })
+      // .use(Tus, { endpoint: "https://tusd.tusdemo.net/files/" });
 
-      // uppy.on("upload", (data) => {
-      //   // Do something
-      //   console.log("Upload data", data);
-      // });
+      uppy.on("upload", (data) => {
+        // Do something
+        console.log("Upload data", data);
 
-      // uppy.on("success", function (fileCount, other) {
-      //   console.log(`${fileCount} files uploaded`, other);
-      // });
+        const id = data.fileIDs[0];
+
+        console.log("file", uppy.getFile(id));
+
+        const reader = new FileReader();
+        reader.readAsArrayBuffer(uppy.getFile(id).data);
+        reader.onload = async () => {
+          console.log("Loaded reader data!");
+          zipAndDownload(reader.result);
+        };
+      });
+
+      uppy.on("success", function (fileCount, other) {
+        console.log(`${fileCount} files uploaded`, other);
+      });
+
+      const desiredSubdocumentsRaw = `1-3: Contact Information
+4: IPP Participation Agreement
+5-6: Telehealth Agreement
+7-8: Participant Rights
+9: Privacy Practices
+10-11: Informed Consent
+12: Telehealth Consent
+13-14: Attendance Policy
+15: IPP Goals
+16-17: Collateral ROI
+18: Partner ROI
+19: Email ROI
+20: Therapy Fee
+21: Emergency Plan
+22: Insurance Information
+23: Insurance Authorization `;
+
+      const desiredSubdocuments = desiredSubdocumentsRaw
+        .split("\n")
+        .map((line) => {
+          const [range, title] = line.split(": ");
+          const [start, end] = range.split("-").map((x) => parseInt(x));
+          const realRange = [start - 1];
+          if (end) {
+            realRange.push(end - 1);
+          }
+          return { title, range: realRange };
+        });
 
       /**
        * TODO: Play around with Uppy some more.... might be worth it for the nice looking UI,
        * and the drag and drop!
+       *
+       * YESSS WE GOT THERE
        */
 
-      document
-        .getElementById("btn-submit")
-        .addEventListener("click", handleSubmit);
+      async function zipAndDownload(documentAsBytes) {
+        const { PDFDocument } = window.PDFLib;
+        const pdfDoc = await PDFDocument.load(documentAsBytes);
+        console.log("got doc...", pdfDoc);
 
-      let fileInfo = null;
+        const zip = new JSZip();
+        console.log("zip...", zip);
 
-      document.getElementById("upload").addEventListener("change", (ev) => {
-        fileInfo = ev.target.files;
-      });
+        for (const { title, range } of desiredSubdocuments) {
+          // console.log("title", title, range);
+          const subDocument = await PDFDocument.create();
+          const copiedPages = await subDocument.copyPages(pdfDoc, range);
+          for (const p of copiedPages) {
+            subDocument.addPage(p);
+          }
+          const pdfBytes = await subDocument.save();
+          // Ahh yes this is crucial
+          // if (!fs.existsSync(`./download/${fileId}`)) {
+          //   fs.mkdirSync(`./download/${fileId}`);
+          // }
+          // await writePdfBytesToFile(
+          //   `./download/${fileId}/${title}.pdf`,
+          //   pdfBytes
+          // );
+          zip.file(`${title}.pdf`, pdfBytes, { binary: true });
+        }
 
-      async function handleSubmit() {
-        // Yesss!!!
-        const reader = new FileReader();
-        reader.readAsArrayBuffer(fileInfo[0]);
-        reader.onload = async () => {
-          // Wow, this worked (ths window...)
-          const pdfDoc = await window.PDFLib.PDFDocument.load(reader.result);
-          console.log("got doc...", pdfDoc);
+        // Ahhhhhh finally, we got there!!
+        // Now we just have to do it with all subdocuments, and we should be golden... Hell yeah baby
+        // zip.file("testOutput.pdf", pdfDoc.save(), { binary: true });
+        const content = await zip.generateAsync({ type: "binarystring" });
 
-          const zip = new JSZip();
-          console.log("zip...", zip);
-
-          // Ahhhhhh finally, we got there!!
-          // Now we just have to do it with all subdocuments, and we should be golden... Hell yeah baby
-          zip.file("testOutput.pdf", pdfDoc.save(), { binary: true });
-          const content = await zip.generateAsync({ type: "binarystring" });
-
-          download(content, "testZip.zip", "application/zip");
-        };
+        download(content, "testZip.zip", "application/zip");
       }
+
+      // document
+      //   .getElementById("btn-submit")
+      //   .addEventListener("click", handleSubmit);
+
+      // let fileInfo = null;
+
+      // document.getElementById("upload").addEventListener("change", (ev) => {
+      //   fileInfo = ev.target.files;
+      // });
+
+      // async function handleSubmit() {
+      //   // Yesss!!!
+      //   const reader = new FileReader();
+      //   reader.readAsArrayBuffer(fileInfo[0]);
+      //   reader.onload = async () => {
+      //     // Wow, this worked (ths window...)
+      //     zipAndDownload(reader.result);
+      //   };
+      // }
     </script>
   </body>
 </html>
